# Agentic-ERP-end-to-end-development

./: .env.example  .gitignore  Agentic_Decision_Intelligence_Implementation_Blueprint.md  CLAUDE.md  Developer_Log.md  Project_Notes.md  TESTING_GUIDE.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
.session/pi/: lecture-status.md  research-findings.md  research-plan.md
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: contract_agent.py  graph_state.py  kg_agent.py  orchestrator.py
backend/app/api/: routes_approve.py  routes_chat.py  routes_health.py  schemas.py
backend/app/cache/: semantic_cache.py
backend/app/chains/: baseline_chain.py
backend/app/db/: models.py  session.py
backend/app/kg/: client.py  queries.py  schema.py
backend/app/mcp/: server_crag.py  server_cvxpy.py  server_erp.py  server_kg.py  server_ortools.py  server_scipy.py
backend/app/rag/: chunker.py  embedder.py  evaluator.py  reranker.py  retriever.py
backend/app/security/: jwt_auth.py  rbac.py  sanitizer.py
backend/app/solvers/: bullwhip.py  disruption.py  jsp.py  mcnf.py  meio_gsm.py  robust_minmax.py  vrp.py
backend/scripts/: seed_adventureworks.py  seed_contracts.py  seed_neo4j.py
backend/tests/: conftest.py
backend/tests/integration/: test_agent_eval.py  test_baseline_chain.py  test_crag_recall.py  test_e2e_smoke.py  test_orchestrator_graph.py
backend/tests/red_team/: conftest.py  mock_provider.js  promptfoo.yaml  test_injection.py  test_prompt_injection.py
backend/tests/unit/: test_chunker.py  test_crag_retriever.py  test_embedder.py  test_intent_classification.py  test_mcnf.py  test_placeholder.py  test_seed_data.py  test_solver_dispatch.py
data/adventureworks/: init.sql
data/contracts/: contract_01.txt  contract_02.txt  contract_03.txt  contract_04.txt  contract_05.txt  contract_06.txt  contract_07.txt  contract_08.txt  contract_09.txt  contract_10.txt  contract_11.txt  contract_12.txt  contract_13.txt  contract_14.txt  contract_15.txt  contract_16.txt  contract_17.txt  contract_18.txt  contract_19.txt  contract_20.txt
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
fine_tune/: _eval_queries.py  eval_tool_accuracy.py  prepare_dataset.py  train_dpo.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  GraphViewer.tsx  SolverResults.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
